# blinking_circles

./: .gitignore  CMakeLists.txt  readme.md
libs/: readme.txt
source/: main.cpp
